# library

./: CMakeLists.txt  controller.cpp  database.cpp  database.h  ray2.db
GUI/: bookwidget.cpp  bookwidget.h  header.h  imagewidget.cpp  imagewidget.h  loginwidget.cpp  loginwidget.h  mainwindow.cpp  mainwindow.h  publisherwidget.cpp  publisherwidget.h  signupwidget.cpp  signupwidget.h  startwidget.cpp  startwidget.h  studentwidget.cpp  studentwidget.h
